--- a/SimpleNewsWebsite/SimpleNewsWebsite.csproj
+++ b/SimpleNewsWebsite/SimpleNewsWebsite.csproj
@@ -6,10 +6,14 @@
 
 	<ItemGroup>
 		<Folder Include="Areas\Admin\Data\" />
+		<Folder Include="Areas\API\Data\" />
+		<Folder Include="Areas\API\Models\" />
+		<Folder Include="Areas\API\Views\" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+		<PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
 	</ItemGroup>
 
 </Project>
