--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ SimpleNewsWebsite/obj/Debug/net5.0/SimpleNewsWebsite.assets.cache
 .vs/SimpleNewsWebsite/DesignTimeBuild/.dtbcache.v2
 SimpleNewsWebsite/obj/project.nuget.cache
 .vs/SimpleNewsWebsite/DesignTimeBuild/.dtbcache.v2
+SimpleNewsWebsite/obj/Debug/net5.0/project.razor.json
